pkg/sql/parser/lex.go

//line lex.rl:1
package parser

import (
	"bytes"
	"fmt"
	"strconv"
	"unicode/utf8"
	
	"github.com/cockroachdb/cockroach/pkg/sql/lex"
)

func (sc *Scanner) scan(lval *sqlSymType) {

	
//line lex.rl:15
	
//line lex.go:20
const scanner_start int = 71
const scanner_first_final int = 71
const scanner_error int = 0

const scanner_en_main int = 71


//line lex.rl:16

	data := sc.in
	cs, p, pe, eof := sc.cs, sc.pos, len(data), len(data)
	_ = eof

	var (
		mark int
		s string
		uval uint64
		err error
		isFconst bool
		isUpper bool
		isNotASCII bool
		numQuote int
		b []byte
		ch byte
		rn rune
		buf *bytes.Buffer
	)
	str := func() { s = string(data[mark:p]) }
	emit := func(tok int, s string) {
		lval.id = tok
		lval.str = s
		lval.pos = p
		sc.pos = p
		sc.cs = cs
	}
	emitToken := func(tok int) {
		lval.id = tok
		lval.str = data[mark:p]
		lval.pos = p
		sc.pos = p
		sc.cs = cs
	}
	emitError := func(err string) {
		lval.id = ERROR
		lval.str = err
	}

	
//line lex.go:69
	{
	cs = scanner_start
	}

//line lex.go:74
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 71:
		goto st_case_71
	case 0:
		goto st_case_0
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 1:
		goto st_case_1
	case 74:
		goto st_case_74
	case 2:
		goto st_case_2
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 3:
		goto st_case_3
	case 81:
		goto st_case_81
	case 4:
		goto st_case_4
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 5:
		goto st_case_5
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	case 100:
		goto st_case_100
	case 101:
		goto st_case_101
	case 102:
		goto st_case_102
	case 103:
		goto st_case_103
	case 104:
		goto st_case_104
	case 105:
		goto st_case_105
	case 106:
		goto st_case_106
	case 6:
		goto st_case_6
	case 107:
		goto st_case_107
	case 108:
		goto st_case_108
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 109:
		goto st_case_109
	case 110:
		goto st_case_110
	case 9:
		goto st_case_9
	case 111:
		goto st_case_111
	case 112:
		goto st_case_112
	case 113:
		goto st_case_113
	case 114:
		goto st_case_114
	case 115:
		goto st_case_115
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 116:
		goto st_case_116
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 117:
		goto st_case_117
	case 118:
		goto st_case_118
	case 119:
		goto st_case_119
	case 120:
		goto st_case_120
	case 121:
		goto st_case_121
	case 122:
		goto st_case_122
	case 123:
		goto st_case_123
	case 124:
		goto st_case_124
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 125:
		goto st_case_125
	case 70:
		goto st_case_70
	case 126:
		goto st_case_126
	case 127:
		goto st_case_127
	case 128:
		goto st_case_128
	case 129:
		goto st_case_129
	case 130:
		goto st_case_130
	case 131:
		goto st_case_131
	case 132:
		goto st_case_132
	case 133:
		goto st_case_133
	case 134:
		goto st_case_134
	case 135:
		goto st_case_135
	}
	goto st_out
tr188:
//line lex.rl:322
 emitToken(int(data[p-1])); return 
	goto st71
tr220:
//line lex.rl:151

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '"' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = []byte(data[mark+1:p-1])
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					emitError(errInvalidUTF8)
					return
				}
				isNotASCII = false
			}
			emit(lex.IDENT, string(b)); return
		
	goto st71
tr256:
//line lex.rl:355
 emitToken(lex.INET_CONTAINS_OR_CONTAINED_BY); return 
	goto st71
tr287:
//line lex.rl:186

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '\'' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = []byte(data[mark+1:p-1])
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					emitError(errInvalidUTF8)
					return
				}
				isNotASCII = false
			}
			emit(lex.SCONST, string(b)); return
		
	goto st71
tr322:
//line lex.rl:73

			// Get zeros.
			if mark == p {
				mark--
			}
			str()
			if isFconst {
				emit(lex.FCONST, s); return
			} else {
				emit(lex.ICONST, s); return
			}
			isFconst = false
		
	goto st71
tr351:
//line lex.rl:324
 emitToken(lex.DOT_DOT); return 
	goto st71
tr383:
//line lex.rl:349
 emitToken(lex.FLOORDIV); return 
	goto st71
tr417:
//line lex.rl:345
 emitToken(lex.TYPECAST); return 
	goto st71
tr448:
//line lex.rl:344
 emitToken(lex.TYPEANNOTATE); return 
	goto st71
tr483:
//line lex.rl:335
 emitToken(lex.LSHIFT); return 
	goto st71
tr515:
//line lex.rl:334
 emitToken(lex.INET_CONTAINED_BY_OR_EQUALS); return 
	goto st71
tr548:
//line lex.rl:342
 emitToken(lex.GREATER_EQUALS); return 
	goto st71
tr582:
//line lex.rl:332
 emitToken(lex.JSON_ALL_EXISTS); return 
	goto st71
tr614:
//line lex.rl:353
 emitToken(lex.CONTAINS); return 
	goto st71
tr645:
//line lex.rl:97

			if isNotASCII {
				str()
				s = lex.NormalizeName(s)
			} else if isUpper {
				b := make([]byte, p-mark)
				for i, c := range data[mark:p] {
					if c >= 'A' && c <= 'Z' {
						c += 'a' - 'A'
					}
					b[i] = byte(c)
				}
				s = string(b)
			} else {
				str()
			}

			if id, ok := lex.Keywords[s]; ok {
				emit(int(id.Tok), s); return
			} else {
				emit(lex.IDENT, s); return
			}
			isUpper = false
			isNotASCII = false
		
	goto st71
tr667:
//line lex.rl:293

			emit(lex.BITCONST, string(data[mark+2:p-1])); return
		
	goto st71
tr699:
//line lex.rl:270

			if !utf8.Valid(buf.Bytes()) {
				emitError(errInvalidUTF8)
				return
			}
			emit(lex.SCONST, buf.String()); return
		
	goto st71
tr730:
//line lex.rl:266

			emit(lex.BCONST, buf.String()); return
		
	goto st71
tr761:
//line lex.rl:97

			if isNotASCII {
				str()
				s = lex.NormalizeName(s)
			} else if isUpper {
				b := make([]byte, p-mark)
				for i, c := range data[mark:p] {
					if c >= 'A' && c <= 'Z' {
						c += 'a' - 'A'
					}
					b[i] = byte(c)
				}
				s = string(b)
			} else {
				str()
			}

			if id, ok := lex.Keywords[s]; ok {
				emit(int(id.Tok), s); return
			} else {
				emit(lex.IDENT, s); return
			}
			isUpper = false
			isNotASCII = false
		
//line lex.rl:322
 emitToken(int(data[p-1])); return 
	goto st71
tr780:
//line lex.rl:351
 emitToken(lex.REGIMATCH); return 
	goto st71
tr812:
//line lex.rl:347
 emitToken(lex.CONCAT); return 
	goto st71
tr843:
//line lex.rl:330
 emitToken(lex.HELPTOKEN); return 
	goto st71
tr874:
//line lex.rl:331
 emitToken(lex.JSON_SOME_EXISTS); return 
	goto st71
tr905:
//line lex.rl:341
 emitToken(lex.RSHIFT); return 
	goto st71
tr937:
//line lex.rl:340
 emitToken(lex.INET_CONTAINS_OR_EQUALS); return 
	goto st71
tr968:
//line lex.rl:337
 emitToken(lex.LESS_EQUALS); return 
	goto st71
tr999:
//line lex.rl:336
 emitToken(lex.NOT_EQUALS); return 
	goto st71
tr1030:
//line lex.rl:338
 emitToken(lex.CONTAINED_BY); return 
	goto st71
tr1063:
//line lex.rl:94

			emit(lex.ICONST, data[mark-1:p]); return
		
	goto st71
tr1088:
//line lex.rl:358
 emitToken(lex.FETCHVAL); return 
	goto st71
tr1119:
//line lex.rl:357
 emitToken(lex.FETCHTEXT); return 
	goto st71
tr1150:
//line lex.rl:59

			mark++
			str()
			uval, err = strconv.ParseUint(s, 10, 64)
			if err != nil {
				emitError(err.Error())
				return
			}
			if err == nil && uval > 1<<63 {
				emitError(fmt.Sprintf("integer value out of range: %d", uval))
				return
			}
			emit(lex.PLACEHOLDER, s); return
		
	goto st71
tr1179:
//line lex.rl:362
 emitToken(lex.REMOVE_PATH); return 
	goto st71
tr1210:
//line lex.rl:361
 emitToken(lex.FETCHVAL_PATH); return 
	goto st71
tr1241:
//line lex.rl:360
 emitToken(lex.FETCHTEXT_PATH); return 
	goto st71
tr1272:
//line lex.rl:326
 emitToken(lex.NOT_EQUALS); return 
	goto st71
tr1303:
//line lex.rl:328
 emitToken(lex.NOT_REGMATCH); return 
	goto st71
tr1335:
//line lex.rl:327
 emitToken(lex.NOT_REGIMATCH); return 
	goto st71
	st71:
		if p++; p == pe {
			goto _test_eof71
		}
	st_case_71:
//line lex.go:648
		switch data[p] {
		case 32:
			goto st71
		case 33:
			goto tr158
		case 34:
			goto tr159
		case 35:
			goto tr160
		case 36:
			goto tr161
		case 38:
			goto tr163
		case 39:
			goto tr164
		case 43:
			goto tr165
		case 45:
			goto tr166
		case 46:
			goto tr167
		case 47:
			goto tr168
		case 48:
			goto tr169
		case 58:
			goto tr171
		case 60:
			goto tr172
		case 62:
			goto tr173
		case 63:
			goto tr174
		case 64:
			goto tr175
		case 66:
			goto tr177
		case 69:
			goto tr178
		case 88:
			goto tr179
		case 95:
			goto tr180
		case 98:
			goto tr182
		case 101:
			goto tr183
		case 120:
			goto tr184
		case 124:
			goto tr185
		case 126:
			goto tr186
		case 127:
			goto tr156
		}
		switch {
		case data[p] < 49:
			switch {
			case data[p] < 9:
				if data[p] <= 8 {
					goto tr156
				}
			case data[p] > 13:
				switch {
				case data[p] > 31:
					if 37 <= data[p] && data[p] <= 44 {
						goto tr162
					}
				case data[p] >= 14:
					goto tr156
				}
			default:
				goto st71
			}
		case data[p] > 57:
			switch {
			case data[p] < 91:
				switch {
				case data[p] > 61:
					if 65 <= data[p] && data[p] <= 90 {
						goto tr176
					}
				case data[p] >= 59:
					goto tr162
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 125 {
						goto tr162
					}
				case data[p] >= 97:
					goto tr181
				}
			default:
				goto tr162
			}
		default:
			goto tr170
		}
		goto tr187
tr44:
//line lex.rl:366

				emitError("invalid syntax")
				return
			
	goto st0
tr12:
//line lex.rl:303

				emitError("invalid floating point literal")
				return
			
//line lex.rl:366

				emitError("invalid syntax")
				return
			
	goto st0
tr14:
//line lex.rl:317

				emitError(fmt.Sprintf(`"%c" is not a valid binary digit`, data[p]))
				return
			
//line lex.rl:366

				emitError("invalid syntax")
				return
			
	goto st0
tr23:
//line lex.rl:313

				emitError("invalid hexadecimal bytes literal")
				return
			
//line lex.rl:366

				emitError("invalid syntax")
				return
			
	goto st0
tr154:
//line lex.rl:299

				emitError(errInvalidHexNumeric)
				return
			
//line lex.rl:366

				emitError("invalid syntax")
				return
			
	goto st0
tr156:
//line lex.rl:299

				emitError(errInvalidHexNumeric)
				return
			
//line lex.rl:303

				emitError("invalid floating point literal")
				return
			
//line lex.rl:313

				emitError("invalid hexadecimal bytes literal")
				return
			
//line lex.rl:317

				emitError(fmt.Sprintf(`"%c" is not a valid binary digit`, data[p]))
				return
			
	goto st0
//line lex.go:828
st_case_0:
	st0:
		cs = 0
		goto _out
tr158:
//line lex.rl:56
 mark = p 
	goto st72
tr189:
//line lex.rl:322
 emitToken(int(data[p-1])); return 
//line lex.rl:56
 mark = p 
	goto st72
tr221:
//line lex.rl:151

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '"' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = []byte(data[mark+1:p-1])
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					emitError(errInvalidUTF8)
					return
				}
				isNotASCII = false
			}
			emit(lex.IDENT, string(b)); return
		
//line lex.rl:56
 mark = p 
	goto st72
tr257:
//line lex.rl:355
 emitToken(lex.INET_CONTAINS_OR_CONTAINED_BY); return 
//line lex.rl:56
 mark = p 
	goto st72
tr288:
//line lex.rl:186

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '\'' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = []byte(data[mark+1:p-1])
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					emitError(errInvalidUTF8)
					return
				}
				isNotASCII = false
			}
			emit(lex.SCONST, string(b)); return
		
//line lex.rl:56
 mark = p 
	goto st72
tr323:
//line lex.rl:73

			// Get zeros.
			if mark == p {
				mark--
			}
			str()
			if isFconst {
				emit(lex.FCONST, s); return
			} else {
				emit(lex.ICONST, s); return
			}
			isFconst = false
		
//line lex.rl:56
 mark = p 
	goto st72
tr352:
//line lex.rl:324
 emitToken(lex.DOT_DOT); return 
//line lex.rl:56
 mark = p 
	goto st72
tr384:
//line lex.rl:349
 emitToken(lex.FLOORDIV); return 
//line lex.rl:56
 mark = p 
	goto st72
tr418:
//line lex.rl:345
 emitToken(lex.TYPECAST); return 
//line lex.rl:56
 mark = p 
	goto st72
tr449:
//line lex.rl:344
 emitToken(lex.TYPEANNOTATE); return 
//line lex.rl:56
 mark = p 
	goto st72
tr484:
//line lex.rl:335
 emitToken(lex.LSHIFT); return 
//line lex.rl:56
 mark = p 
	goto st72
tr516:
//line lex.rl:334
 emitToken(lex.INET_CONTAINED_BY_OR_EQUALS); return 
//line lex.rl:56
 mark = p 
	goto st72
tr549:
//line lex.rl:342
 emitToken(lex.GREATER_EQUALS); return 
//line lex.rl:56
 mark = p 
	goto st72
tr583:
//line lex.rl:332
 emitToken(lex.JSON_ALL_EXISTS); return 
//line lex.rl:56
 mark = p 
	goto st72
tr615:
//line lex.rl:353
 emitToken(lex.CONTAINS); return 
//line lex.rl:56
 mark = p 
	goto st72
tr646:
//line lex.rl:97

			if isNotASCII {
				str()
				s = lex.NormalizeName(s)
			} else if isUpper {
				b := make([]byte, p-mark)
				for i, c := range data[mark:p] {
					if c >= 'A' && c <= 'Z' {
						c += 'a' - 'A'
					}
					b[i] = byte(c)
				}
				s = string(b)
			} else {
				str()
			}

			if id, ok := lex.Keywords[s]; ok {
				emit(int(id.Tok), s); return
			} else {
				emit(lex.IDENT, s); return
			}
			isUpper = false
			isNotASCII = false
		
//line lex.rl:56
 mark = p 
	goto st72
tr668:
//line lex.rl:293

			emit(lex.BITCONST, string(data[mark+2:p-1])); return
		
//line lex.rl:56
 mark = p 
	goto st72
tr700:
//line lex.rl:270

			if !utf8.Valid(buf.Bytes()) {
				emitError(errInvalidUTF8)
				return
			}
			emit(lex.SCONST, buf.String()); return
		
//line lex.rl:56
 mark = p 
	goto st72
tr731:
//line lex.rl:266

			emit(lex.BCONST, buf.String()); return
		
//line lex.rl:56
 mark = p 
	goto st72
tr762:
//line lex.rl:97

			if isNotASCII {
				str()
				s = lex.NormalizeName(s)
			} else if isUpper {
				b := make([]byte, p-mark)
				for i, c := range data[mark:p] {
					if c >= 'A' && c <= 'Z' {
						c += 'a' - 'A'
					}
					b[i] = byte(c)
				}
				s = string(b)
			} else {
				str()
			}

			if id, ok := lex.Keywords[s]; ok {
				emit(int(id.Tok), s); return
			} else {
				emit(lex.IDENT, s); return
			}
			isUpper = false
			isNotASCII = false
		
//line lex.rl:322
 emitToken(int(data[p-1])); return 
//line lex.rl:56
 mark = p 
	goto st72
tr781:
//line lex.rl:351
 emitToken(lex.REGIMATCH); return 
//line lex.rl:56
 mark = p 
	goto st72
tr813:
//line lex.rl:347
 emitToken(lex.CONCAT); return 
//line lex.rl:56
 mark = p 
	goto st72
tr844:
//line lex.rl:330
 emitToken(lex.HELPTOKEN); return 
//line lex.rl:56
 mark = p 
	goto st72
tr875:
//line lex.rl:331
 emitToken(lex.JSON_SOME_EXISTS); return 
//line lex.rl:56
 mark = p 
	goto st72
tr906:
//line lex.rl:341
 emitToken(lex.RSHIFT); return 
//line lex.rl:56
 mark = p 
	goto st72
tr938:
//line lex.rl:340
 emitToken(lex.INET_CONTAINS_OR_EQUALS); return 
//line lex.rl:56
 mark = p 
	goto st72
tr969:
//line lex.rl:337
 emitToken(lex.LESS_EQUALS); return 
//line lex.rl:56
 mark = p 
	goto st72
tr1000:
//line lex.rl:336
 emitToken(lex.NOT_EQUALS); return 
//line lex.rl:56
 mark = p 
	goto st72
tr1031:
//line lex.rl:338
 emitToken(lex.CONTAINED_BY); return 
//line lex.rl:56
 mark = p 
	goto st72
tr1064:
//line lex.rl:94

			emit(lex.ICONST, data[mark-1:p]); return
		
//line lex.rl:56
 mark = p 
	goto st72
tr1089:
//line lex.rl:358
 emitToken(lex.FETCHVAL); return 
//line lex.rl:56
 mark = p 
	goto st72
tr1120:
//line lex.rl:357
 emitToken(lex.FETCHTEXT); return 
//line lex.rl:56
 mark = p 
	goto st72
tr1151:
//line lex.rl:59
